# PF-model

./: .gitignore  CMakeLists.txt  README.md  check_solution_trajectory.cpp  check_trajectory_option.cpp  check_trajectory_step1.cpp  check_trajectory_step2.cpp  draw.cpp  draw.hpp  fiber.cpp  fiber.hpp  force.cpp  force.hpp  function.cpp  function.hpp  hello.cpp  lib.cpp  main.cpp  main_2particle.cpp  main_copy.cpp  parameter.hpp  particle.cpp  particle.hpp  test.cpp  vector.cpp  vector.hpp
common/: draw.hpp  equation.cpp  equation.hpp  function.cpp  function.hpp  lib.cpp  parameter.hpp
source/: thickness_patterns.csv
